--- a/content/articles/111.md
+++ b/content/articles/111.md
@@ -1,11 +1,12 @@
 ---
-title: ЖОПА пожаловать в FlatCMS
+title: ПАТЕ ПОЖАЛОВАТЬ
 category: ПФПФПФ
 author: Администратор
 date: 2024-01-15
+cover_image: public/images/image.jpg
 ---
 
-# TEST!
+# T
 
 **FlatCMS** - это революционная система управления контентом, которая использует файлы вместо базы данных.
 
