--- a/content/articles/222.md
+++ b/content/articles/222.md
@@ -3,6 +3,7 @@ title: ЖОПА пожаловать в FlatCMS
 category: ПФПФПФ
 author: Администратор
 date: 2024-01-15
+cover_image: public/images/image2.jpg
 ---
 
 # TEST!
